Closed Bug 1486895 Opened 7 years ago Closed 7 years ago

browser.xhtml: some key shortcuts for menuitems don't work until you've opened the menu

Categories

(Core :: XUL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: bgrins, Assigned: bdahl)

References

Details

Attachments

(1 file)

I noticed this at first with the Browser Console, cmd+shift+J wasn't opening it. But if I open Tools->Web Developer and then close the menu (don't click on anything), the keyboard shortcut starts to work. Another example: cmd+opt+r doesn't reload the browser window until you open the File menu.
Hello Brian, I have changed the bug's component to "Menus" since it's related to them and, in this case, it will probably be addressed sooner. On the other hand, I am trying to reproduce the issue, but I am unable. The shortcut actions work as expected. Please try to provide some more details that you can think of, including: 1. Which browser are you using? 2. Does this issue reproduce constantly? 3. If yes, please test if the issue is reproducible in safe mode, here is a link that can help you: https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode 4. Which operating system are you using? 5. Does this issue reproduce on the latest Nightly? Thank you for your contribution!
Component: General → Menus
Flags: needinfo?(bgrinstead)
(In reply to Bodea Daniel [:danibodea] from comment #1) > Hello Brian, > > I have changed the bug's component to "Menus" since it's related to them > and, in this case, it will probably be addressed sooner. > On the other hand, I am trying to reproduce the issue, but I am unable. The > shortcut actions work as expected. > > Please try to provide some more details that you can think of, including: > 1. Which browser are you using? > 2. Does this issue reproduce constantly? > 3. If yes, please test if the issue is reproducible in safe mode, here is a > link that can help you: > https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe- > mode > 4. Which operating system are you using? > 5. Does this issue reproduce on the latest Nightly? > > Thank you for your contribution! Hi Bodea, this is for an in-development browser mode that's not shipping to users, so it doesn't need any testing. Is there a flag we should set so bugs like this so they don't show up on your radar?
Flags: needinfo?(bgrinstead) → needinfo?(daniel.bodea)
Priority: -- → P3
Hello Brian, In order for your bugs not to get on our lists, you'd need to set its Product and Component when you create them; a relevant component, of course. Thanks!
Flags: needinfo?(daniel.bodea)
The global XBL key handler wasn't being setup for browser.xhtml since it was being setup in XULDocument. MozReview-Commit-ID: H9OGQbAGRQn
Comment on attachment 9010422 [details] Bug 1486895 - Move keyset handling to XUL element. r=smaug Olli Pettay [:smaug] (r- if the bug doesn't explain what the change(s) are about.) has approved the revision.
Attachment #9010422 - Flags: review+
Pushed by bdahl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/46803eba26ad Move keyset handling to XUL element. r=smaug
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 64
Assignee: nobody → bdahl
Component: Menus → XUL
Product: Firefox → Core
Target Milestone: Firefox 64 → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: