Bug 1486895 - Move keyset handling to XUL element. r=smaug

The global XBL key handler wasn't being setup for browser.xhtml since it
was being setup in XULDocument.

MozReview-Commit-ID: H9OGQbAGRQn

Differential Revision: https://phabricator.services.mozilla.com/D6319